--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css?family=Amatic+SC"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"
+    />
     <title>Tic Tac Toe React</title>
   </head>
   <body>
